# openai_test

./: .dockerignore  .env.template  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml
openai_test/: settings.py
src/openai_ms/: settings.py  urls.py  wsgi.py
src/openai_ms/api/: models.py  repositories.py  serializers.py  services.py  urls.py  views.py
src/openai_ms/api/migrations/: 0001_initial.py  0002_prompt_response.py
tests/: conftest.py  test_api.py  test_api_conversation.py  test_api_prompt.py  test_serializers.py
