[tool.poetry]
name = "openai_test"
version = "0.1.0"
description = "OpenAI microservice interface"
authors = ["Domenico Nappo <domenico.nappo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
djangorestframework = "^3.14"
psycopg2-binary = "^2.9"


[tool.poetry.dev-dependencies]
pytest = "^7.4"
pytest-django = "^4.5"
pytest-cov = "^3.0"
flake8 = "^6.0"
black = "^23.7"
isort = "^5.12"

[tool.poetry.extras]
dev = ["ipython"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
# Optional: add any additional pytest configuration here, if needed
# For example:
# DJANGO_SETTINGS_MODULE = "my_drf_app.settings"
# addopts = "--cov=my_drf_app --cov-report=html"
